--- a/LR1/index.html
+++ b/LR1/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OZON</title>
+  <title>OZON — интернет-магазин. Миллионы товаров по выгодным ценам</title>
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/normalize.css">
@@ -23,8 +23,9 @@
         <button type="button" class="btn btn-secondary">RUB</button>
         
         <div class="header__left-link">
-          <a class="link-secondary" href="#">Москва</a>
-          <span>•</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="icon__map"><path fill="currentColor" d="M8 9a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"></path><path fill="currentColor" d="M8 0a7 7 0 0 0-7 7c0 2.91 1.713 5.148 3.285 6.596a15.845 15.845 0 0 0 2.945 2.13c.155.085.32.172.406.205a1 1 0 0 0 .728 0c.086-.033.25-.12.406-.206a15.846 15.846 0 0 0 2.945-2.13C13.287 12.149 15 9.91 15 7a7 7 0 0 0-7-7ZM3 7a5 5 0 0 1 10 0c0 2.09-1.237 3.833-2.64 5.125A13.846 13.846 0 0 1 8 13.863a13.847 13.847 0 0 1-2.36-1.738C4.237 10.833 3 9.09 3 7Z"></path></svg>
+          <a class="link-secondary" href="#">Волгоград</a>
+          <span style="margin: 0 4px;">•</span>
           <a class="link-primary" href="#">Укажите адрес доставки</a>
         </div>
       </div>
@@ -44,9 +45,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Подарочные сертификаты</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Помощь</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Помощь</a>
