--- a/LR1/index.html
+++ b/LR1/index.html
@@ -17,12 +17,11 @@
 
 </head>
 <body>
-  <header>
-    <div class="container header__container">
-      <div class="header__left">
+  <div class="container nav__container">
+      <div class="nav__left">
         <button type="button" class="btn btn-secondary">RUB</button>
         
-        <div class="header__left-link">
+        <div class="nav__left-link">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="icon__map"><path fill="currentColor" d="M8 9a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"></path><path fill="currentColor" d="M8 0a7 7 0 0 0-7 7c0 2.91 1.713 5.148 3.285 6.596a15.845 15.845 0 0 0 2.945 2.13c.155.085.32.172.406.205a1 1 0 0 0 .728 0c.086-.033.25-.12.406-.206a15.846 15.846 0 0 0 2.945-2.13C13.287 12.149 15 9.91 15 7a7 7 0 0 0-7-7ZM3 7a5 5 0 0 1 10 0c0 2.09-1.237 3.833-2.64 5.125A13.846 13.846 0 0 1 8 13.863a13.847 13.847 0 0 1-2.36-1.738C4.237 10.833 3 9.09 3 7Z"></path></svg>
           <a class="link-secondary" href="#">Волгоград</a>
           <span style="margin: 0 4px;">•</span>
@@ -49,10 +48,82 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Помощь</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item"> 
           <a class="nav-link" href="#">Пункты выдачи</a>
         </li>
       </ul>
+    </div>
+  <header>
+    <div class="container header__container">
+      <div class="header-search">
+        <div class="search-img__item">
+          <a href="#" class="search-img__link">
+            <img src="https://ir.ozone.ru/s3/cms/e2/td8/wc200/doodle1_.png" alt="OZON" class="search-img__pictures">
+          </a>
+        </div>
+
+
+      </div>
+
+      <div class="header__nav">
+        <ul class="nav">
+          <li class="header__nav-item">
+            <a class="header__nav-link header_active" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/cd/tc6/union.svg');"></span>
+              OZON Fresh
+            </a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/52/tae/union_13.png');"></span>
+              Ozon карта
+            </a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/fb/t19/ic_m_plane.svg');"></span>
+              Билеты, Отели, Туры
+            </a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/17/t22/ic_m_dresses.png');"></span>
+              Одежда и обувь
+            </a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/cc/tf7/ic_m_electronics.png');"></span>
+              Электроника
+            </a>
+          </li>
+          <li class="header__nav-item">
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/a8/te3/union_8.png');"></span>
+              Дом и сад
+            </a>
+          </li>
+          <li class="header__nav-item"> 
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/ff/tc3/union_3.png');"></span>
+              Детские товары
+            </a>
+          </li>
+          <li class="header__nav-item"> 
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/47/t41/union_14.png');"></span>
+              Акции
+            </a>
+          </li>
+          <li class="header__nav-item"> 
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/07/tcb/ic_m_status_points3x.svg');"></span>
+              Premium
+            </a>
+          </li>
+          <li class="header__nav-item"> 
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/8e/tfb/union_18.png');"></span>
+              Бренды
+            </a>
+          </li>
+          <li class="header__nav-item"> 
+            <a class="header__nav-link" href="#"><span class="header__nav-icon" style="background-image:url('https://cdn1.ozone.ru/s3/cms/3f/tae/union_17.png');"></span>
+              Рассрочка
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
 
