--- a/LR1/index.html
+++ b/LR1/index.html
@@ -295,39 +295,41 @@
                   <div class="info__header_text">
                     <span>Оригинальный товар</span>
                   <span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="_4-d9" style="color: var(--ozBGQuaternary);"><path fill="currentColor" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16ZM8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 3v4a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="_4-d9" style="color:#b3bcc5;"><path fill="currentColor" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16ZM8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 3v4a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
                   </span>
                   </div>
                 </div>
               </div>
               <div class="info__description">
                 <dl class="description__item">
-                  <dt class="description__item_text"><span>Бренд</span></dt>
+                  <dt class="description__item_text" ><span style="background-color: white;">Бренд</span></dt>
                   <dd class="description__item_link"><a href="/brand/shell-140564506/">Shell</a></dd>
                 </dl>
 
                 <dl class="description__item">
-                  <dt class="description__item_text"><span>Серии</span></dt>
+                  <dt class="description__item_text"><span style="background-color: white;">Серии</span></dt>
                   <dd class="description__item_link"><a href="/series/helix-hx8-87409036/">Helix HX8</a></dd>
                 </dl>
 
                 <dl class="description__item">
-                  <dt class="description__item_text"><span>Партномер (артикул производителя)</span></dt>
+                  <dt class="description__item_text"><span style="background-color: white;">Партномер (артикул производителя)</span></dt>
                   <dd class="description__item_link">550051529</dd>
                 </dl>
 
                 <dl class="description__item">
                   <dt class="description__item_text">
-                    <span>Вязкость по SAE</span>
+                    <span style="background-color: white;">Вязкость по SAE</span>
                     <span>
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="_4-d9" style="color: var(--ozBGQuaternary);"><path fill="currentColor" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16ZM8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 3v4a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="_4-d9" style="color:#b3bcc5;"><path fill="currentColor" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16ZM8 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 3v4a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
                     </span>
                   </dt>
                   <dd class="description__item_link">5W-40</dd>
                 </dl>
 
                 <dl class="description__item">
-                  <dt class="description__item_text"><span>Объем, л</span></dt>
+                  <dt class="description__item_text">
+                    <span style="background-color: white;">Объем, л</span>
+                  </dt>
                   <dd class="description__item_link">4</dd>
                 </dl>
               </div>
@@ -343,14 +345,27 @@
                     <span class="price-discount">5 399 ₽</span>
                   </div>
 
-                  <div class="item__price_card"></div>
+                  <div class="item__price_card">
+                    4 438 ₽  при оплате Ozon Картой
+                    <span>
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="x4-a6 x4-a7 x4-a8" style="color:#fff;"><path fill="currentColor" d="M8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12Zm0-8a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 2v3a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
+                    </span>
+                  </div>
 
                   <div class="item__price_best-link">
-                    <a href="#"></a>
+                    <a href="#">Есть дешевле, 3 679 ₽</a>
+                  </div>
+
+                  <div class="item__price_low-link">
+                    <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="x5-d9"><path fill="#005bff" d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2ZM8 2a3 3 0 0 1 3 3c0 1.702.561 3.35 1.086 4.531A16.248 16.248 0 0 0 12.83 11H3.17a16.254 16.254 0 0 0 .744-1.469C4.439 8.351 5 6.701 5 5a3 3 0 0 1 3-3Zm6.556 7.988a14.277 14.277 0 0 1-.642-1.27C13.439 7.65 13 6.299 13 5A5 5 0 1 0 3 5c0 1.298-.439 2.65-.914 3.719-.233.526-.467.964-.642 1.27-.18.314-.444.63-.444 1.011v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1c0-.38-.264-.697-.444-1.012Z"></path></svg></span>
+                    <a href="#">Узнать о снижении цены</a>
                   </div>
                 </div>
                 <div class="item__basket">
-                  
+                  <button class="btn btn__basket btn-primary">Добавить в корзину</button>
+                </div>
+                <div class="item__delivery">
+                  Доставка <b>послезавтра</b>
                 </div>
             </div>
           </div>
