--- a/LR1/index.html
+++ b/LR1/index.html
@@ -281,6 +281,9 @@
               </div>
               <div class="product__img_right">
                 <img fetchpriority="high" elementtiming="lcp_eltiming_webGallery-1748176-default-1" data-lcp-name="webGallery-1748176-default-1" src="https://ir.ozone.ru/s3/multimedia-2/wc1000/6092857862.jpg" alt="Моторное масло Shell Helix HX8 5W-40 Синтетическое 4 л #1" class="w5k _24-a">
+                <div class="product__img-price">
+                  <span class="product__img-price_text">−13%</span>
+                </div>
               </div>
             </div>
 
@@ -337,26 +340,26 @@
             </div>
           </div>
 
-          <div class="product__price">
-            <div class="product__price_item">
-                <div class="item__price">
-                  <div class="item__price_value">
-                    <span class="price-real">3 929 ₽</span>
+          <div class="product-price">
+            <div class="product-price__item">
+                <div class="item-price">
+                  <div class="item-price__value">
+                    <span class="price-real">4 672 ₽</span>
                     <span class="price-discount">5 399 ₽</span>
                   </div>
 
-                  <div class="item__price_card">
+                  <div class="item-price__card">
                     4 438 ₽  при оплате Ozon Картой
                     <span>
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="x4-a6 x4-a7 x4-a8" style="color:#fff;"><path fill="currentColor" d="M8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12Zm0-8a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1 2v3a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0Z"></path></svg>
                     </span>
                   </div>
 
-                  <div class="item__price_best-link">
+                  <div class="item-price__best-link">
                     <a href="#">Есть дешевле, 3 679 ₽</a>
                   </div>
 
-                  <div class="item__price_low-link">
+                  <div class="item-price__low-link">
                     <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="x5-d9"><path fill="#005bff" d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2ZM8 2a3 3 0 0 1 3 3c0 1.702.561 3.35 1.086 4.531A16.248 16.248 0 0 0 12.83 11H3.17a16.254 16.254 0 0 0 .744-1.469C4.439 8.351 5 6.701 5 5a3 3 0 0 1 3-3Zm6.556 7.988a14.277 14.277 0 0 1-.642-1.27C13.439 7.65 13 6.299 13 5A5 5 0 1 0 3 5c0 1.298-.439 2.65-.914 3.719-.233.526-.467.964-.642 1.27-.18.314-.444.63-.444 1.011v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1c0-.38-.264-.697-.444-1.012Z"></path></svg></span>
                     <a href="#">Узнать о снижении цены</a>
                   </div>
@@ -368,6 +371,56 @@
                   Доставка <b>послезавтра</b>
                 </div>
             </div>
+
+            <div class="product-price__questions">
+              <div class="product-price__credit">
+                <div class="credit__item">
+                  <div class="product-price__credit-header">
+                    <span class="price__credit-header_text">Ozon Рассрочка</span>
+                    <a href="https://www.ozon.ru/section/limit" class="lo8">Подробнее</a>
+                  </div>
+                  <div class="product-price__credit-price">
+                    <span class="price__credit-price_text">855 ₽</span>
+                    <span style="font-size: 14px;">× 6 месяцев</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="product-price__faq">
+                <div class="faq__item">
+                  <div class="faq__title">Часто задаваемые вопросы</div>
+                  <div class="faq-questions">
+                    <a class="faq-questions__link" href="/my/deliveryPriceInfo" target="_blank">Условия доставки</a>
+                    <a class="faq-questions__link" href="https://docs.ozon.ru/common/otmena-i-vozvrat-zakaza/kak-vernut-tovar" target="_blank">Возврат товаров</a>
+                    <a class="faq-questions__link" href="https://docs.ozon.ru/common/oplata/sposoby-oplaty" target="_blank">Способы оплаты</a>
+                    <a class="faq-questions__link" href="https://docs.ozon.ru/common/otmena-i-vozvrat-zakaza/vozvrat-deneg-i-ballov/" target="_blank">Возврат денег</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="product-price__delivery">
+                <div class="delivery__item">
+                  <h2 class="delivery__title">Информация о доставке</h2>
+                  <div class="delivery__city">
+                    <span class="city-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path fill="currentColor" d="M12 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Zm-3 5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Z"></path><path fill="currentColor" d="M12 1a9 9 0 0 0-9 9c0 2.514 1.136 4.848 2.699 6.942 1.565 2.099 3.631 4.05 5.643 5.81a1 1 0 0 0 1.316 0c2.012-1.76 4.078-3.711 5.644-5.81C19.864 14.848 21 12.514 21 10a9 9 0 0 0-9-9Zm-7 9a7 7 0 0 1 14 0c0 1.904-.864 3.82-2.302 5.746-1.275 1.71-2.945 3.353-4.698 4.92-1.753-1.567-3.423-3.21-4.699-4.92C5.864 13.82 5 11.904 5 10Z"></path></svg>
+                    </span>
+                    <a href="#" class="city-text__link">
+                      <span class="delivery__city-text">Волгоград, Волгоградская область</span>
+                      <span class="kw1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="wk1"><path fill="currentColor" d="M5.293 12.293a1 1 0 1 0 1.414 1.414l5-5a1 1 0 0 0 0-1.414l-5-5a1 1 0 0 0-1.414 1.414L9.586 8l-4.293 4.293Z"></path></svg></span>
+                    </a>
+                  </div>
+                  <div class="delivery__courier">
+
+                  </div>
+                  <div class="delivery__point">
+                    <span>Пункты выдачи и постаматы</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+
           </div>
         </div>
         
