--- a/LR1/index.html
+++ b/LR1/index.html
@@ -32,7 +32,7 @@
 
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Стать продавцом</a>
+          <a class="nav-link active active__nav" aria-current="page" href="#">Стать продавцом</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Покупать как компания</a>
@@ -59,7 +59,7 @@
       <div class="header-search">
         <div class="search-img__item">
           <a href="#" class="search-img__link">
-            <img src="https://ir.ozone.ru/s3/cms/e2/td8/wc200/doodle1_.png" alt="OZON" class="search-img__pictures">
+            <img src="https://ir.ozone.ru/s3/cms/8e/tf9/wc200/logo-logo-ozon-blue-png.png" alt="OZON" class="search-img__pictures">
           </a>
         </div>
 
@@ -1431,8 +1431,117 @@
   </main>
 
 
-  <footer>
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="footer-title">
+        <div class="footer-title__img">
+          <a target="_self" href="https://job.ozon.ru/" class="footer-title__img-link">
+            <img loading="lazy" src="https://ir.ozone.ru/s3/cms/12/tdb/group_357672.png" alt="Ozon Job">
+          </a>
+        </div>
+        <div class="footer-title__item">
+          <a target="_self" href="https://job.ozon.ru/it/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M11 20v1H6a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2h-5v-1a3 3 0 0 0-3-3H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-4a1 1 0 1 0 0 2h4a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3H4a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h6a1 1 0 0 1 1 1Z"></path><path fill="currentColor" d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"></path></svg></span><span>IT</span></a>
+          <a target="_self" href="https://job.ozon.ru/office/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="m21.867 15.127.244-.028a1 1 0 0 0 .889-.994V8a1 1 0 0 0-1-1h-3V6a5 5 0 0 0-5-5h-4a5 5 0 0 0-5 5v1H2a1 1 0 0 0-1 1v6.105a1 1 0 0 0 .889.994l.244.028.437 3.493A5 5 0 0 0 7.53 23h8.938a5 5 0 0 0 4.961-4.38l.437-3.493ZM7 6a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v2a1 1 0 0 0 1 1h3v4.211l-6 .67V13a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v.882l-6-.67V9h11a1 1 0 1 0 0-2H7V6Zm4 9.01a.8.8 0 0 0 0-.022V14h2v2h-2v-.99Zm-2 .884V17a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.106l4.823-.539-.377 3.017A3 3 0 0 1 16.469 21H7.53a3 3 0 0 1-2.977-2.628l-.377-3.017 4.823.54Z"></path></svg></span><span>Офис</span></a>
+          <a target="_self" href="https://job.ozon.ru/fintech/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M16 12a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"></path><path fill="currentColor" d="M23 14a2 2 0 0 1-2 2v3a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v3a2 2 0 0 1 2 2v4Zm-4 5v-3h-4a4 4 0 0 1 0-8h1a1 1 0 1 1 0 2h-1a2 2 0 1 0 0 4h6v-4h-1a1 1 0 0 1-1-1V5a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1Z"></path></svg></span><span>Финтех</span></a>
+          <a target="_self" href="https://job.ozon.ru/fulfillment/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="m1.427 8.18 10-7a1 1 0 0 1 1.146 0l10 7A1 1 0 0 1 23 9v13a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V9a1 1 0 0 1 .427-.82ZM3 21h2v-4a1 1 0 0 1 1-1h2v-4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v4h2a1 1 0 0 1 1 1v4h2V9.52l-9-6.3-9 6.3V21Zm10-3v3h4v-3h-1v1a1 1 0 1 1-2 0v-1h-1Zm-6 3h4v-3h-1v1a1 1 0 1 1-2 0v-1H7v3Zm3-8v3h4v-3h-1v1a1 1 0 1 1-2 0v-1h-1Z"></path></svg></span><span>Фулфилмент</span></a>
+          <a target="_self" href="https://job.ozon.ru/fresh/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M8 14a1 1 0 0 1 1 1c0 .612.285 1.072.805 1.418.549.366 1.343.582 2.195.582a1 1 0 1 1 0 2c-1.148 0-2.354-.284-3.305-.918C7.715 17.428 7 16.388 7 15a1 1 0 0 1 1-1Z"></path><path fill="currentColor" d="M12 1c-1.384 0-2.5.277-3.28.56a7.76 7.76 0 0 0-.91.397 4.65 4.65 0 0 0-.326.186c-.485.31-.61.954-.308 1.426.053.082.163.244.335.457a7.81 7.81 0 0 0 1.03 1.05c.927.784 2.347 1.632 4.318 1.914a1 1 0 1 0 .283-1.98c-1.691-.241-2.835-1.013-3.517-1.646A7.696 7.696 0 0 1 12 3c1.365 0 2.659.32 3.577.922C16.457 4.498 17 5.327 17 6.5c0 1.238-.791 2.312-1.902 3.194a6.587 6.587 0 0 0-.761-.546C13.38 8.56 11.952 8 10 8c-4.052 0-7 2.948-7 7 0 2.63 1.331 4.664 3.237 6.005C8.121 22.331 10.581 23 13 23c2.432 0 4.426-.677 5.832-1.86A5.977 5.977 0 0 0 21 16.5c0-1.543-.625-2.646-1.253-3.352a5.097 5.097 0 0 0-.857-.769 3.9 3.9 0 0 0-.391-.246c-.49-.265-1.134-.099-1.393.42a1.001 1.001 0 0 0 .44 1.338s.085.047.189.12c.138.099.328.252.518.466.372.419.747 1.066.747 2.023 0 1.206-.496 2.3-1.457 3.11-.97.817-2.475 1.39-4.543 1.39-2.08 0-4.12-.581-5.612-1.63C5.919 18.336 5 16.87 5 15c0-2.948 2.052-5 5-5 1.548 0 2.619.44 3.288.852.592.364.89.721.918.756a1 1 0 0 0 1.349.224C17.115 10.792 19 9.031 19 6.5c0-1.933-.957-3.354-2.327-4.251C15.34 1.377 13.635 1 12 1Z"></path></svg></span><span>Fresh</span></a>
+          <a target="_self" href="https://job.ozon.ru/logistic/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M1 4a1 1 0 0 1 1-1h11a1 1 0 1 1 0 2H3v12h1.17a3.001 3.001 0 0 1 5.66 0H12V8a1 1 0 0 1 1-1h3.078a5 5 0 0 1 3.904 1.877l1.922 2.403A5 5 0 0 1 23 14.403V18a1 1 0 0 1-1 1h-1.17a3.001 3.001 0 0 1-5.66 0H9.83a3.001 3.001 0 0 1-5.66 0H2a1 1 0 0 1-1-1V4Zm13 13h1.17a3.001 3.001 0 0 1 5.66 0H21v-2.597a3 3 0 0 0-.657-1.874l-1.923-2.403A3 3 0 0 0 16.077 9H14v2h2a1 1 0 1 1 0 2h-2v4Zm-6 1a1 1 0 1 0-2 0 1 1 0 0 0 2 0Zm10-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2Z"></path></svg></span><span>Логистика</span></a>
+          <a target="_self" href="https://job.ozon.ru/internships/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M12.414 3.09a1 1 0 0 0-.828 0l-11 5a1 1 0 0 0 0 1.82L4 11.462V18a1 1 0 0 0 .277.69c.154.162.333.301.513.432.311.226.768.51 1.39.79C7.428 20.472 9.318 21 12 21c2.682 0 4.572-.527 5.82-1.088a7.828 7.828 0 0 0 1.39-.79c.18-.13.357-.27.512-.43.177-.186.278-.435.278-.692v-6.538l2-.909V13a1 1 0 1 0 2 0V9a1 1 0 0 0-.586-.91l-11-5ZM6 17.528v-5.157l5.586 2.54a1 1 0 0 0 .828 0L18 12.37v5.157a5.93 5.93 0 0 1-1 .56c-.978.44-2.588.912-5 .912s-4.022-.473-5-.912a5.927 5.927 0 0 1-1-.56ZM20.583 9l-1.976.898a1.02 1.02 0 0 0-.04.019L12 12.902 3.417 9 12 5.098 20.583 9ZM24 17a1 1 0 1 0-2 0v1a1 1 0 1 0 2 0v-1Z"></path></svg></span><span>Стажировки</span></a>
+          <a target="_self" href="https://job.ozon.ru/events/" class="footer-title__link"><span class="di4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d1i"><path fill="currentColor" d="M8 2v1H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3h-2V2a1 1 0 1 0-2 0v1h-4V2a1 1 0 0 0-2 0ZM5 9V6a1 1 0 0 1 1-1h2v1a1 1 0 0 0 2 0V5h4v1a1 1 0 1 0 2 0V5h2a1 1 0 0 1 1 1v3H5Zm0 2h14v7a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1v-7Z"></path></svg></span><span>События</span></a>
+        </div>
+      </div>
 
+      <div class="footer-description">
+        <div class="footer-description__qr">
+          <img loading="lazy" src="https://ir.ozone.ru/s3/cms/28/t9c/qr-code_1.png" class="qr-title__img">
+          <p class="qr__text">Наведите камеру и скачайте бесплатное приложение Ozon</p>
+          <div class="qr__link">
+            <img loading="lazy" src="https://ir.ozone.ru/s3/cms/0e/ta0/group_357649.png" class="qr-description__img">
+            <img loading="lazy" src="https://ir.ozone.ru/s3/cms/9b/te1/group_357648.png" class="qr-description__img">
+            <img loading="lazy" src="https://ir.ozone.ru/s3/cms/20/tcc/group_357647.png" class="qr-description__img">
+          </div>
+        </div>
+
+        <div class="footer-description__item">
+          <div class="footer-description__list">
+            <ul class="footer-description__list_one header__nav">
+              <li class="list__item">
+                <span class="list__title">Ozon интернет-магазин</span>
+              </li>
+              <li class="list__item"><a href="" class="list__link">Об Ozon / About Ozon</a></li>
+              <li class="list__item"><a href="" class="list__link">Вакансии</a></li>
+              <li class="list__item"><a href="" class="list__link">Стать курьером</a></li>
+              <li class="list__item"><a href="" class="list__link">Бренд Ozon</a></li>
+              <li class="list__item"><a href="" class="list__link">Реквизиты</a></li>
+              <li class="list__item"><a href="" class="list__link">Информация для СМИ</a></li>
+              <li class="list__item"><a href="" class="list__link">Арт-проект Ozon Ballon</a></li>
+              <li class="list__item"><a href="" class="list__link">Устойчивое развитие</a></li>
+              <li class="list__item"><a href="" class="list__link">Ozon Забота</a></li>
+            </ul>
+
+            <ul class="footer-description__list_two header__nav">
+              <li class="list__item">
+                <span class="list__title">Зарабатывать с Ozon</span>
+              </li>
+              <li class="list__item"><a href="" class="list__link">Об Ozon / About Ozon</a></li>
+              <li class="list__item"><a href="" class="list__link">Вакансии</a></li>
+              <li class="list__item"><a href="" class="list__link">Стать курьером</a></li>
+              <li class="list__item"><a href="" class="list__link">Бренд Ozon</a></li>
+              <li class="list__item"><a href="" class="list__link">Реквизиты</a></li>
+              <li class="list__item"><a href="" class="list__link">Информация для СМИ</a></li>
+              <li class="list__item"><a href="" class="list__link">Арт-проект Ozon Ballon</a></li>
+            </ul>
+
+            <ul class="footer-description__list_three header__nav">
+              <li class="list__item">
+                <span class="list__title">Покупать как компания</span>
+              </li>
+              <li class="list__item"><a href="" class="list__link">Добавить компанию</a></li>
+              <li class="list__item"><a href="" class="list__link">Мои компании</a></li>
+              <li class="list__item"><a href="" class="list__link">Подарочные сертификаты</a></li>
+            </ul>
+
+            <ul class="footer-description__list_four header__nav">
+              <li class="list__item">
+                <span class="list__title">Помощь</span>
+              </li>
+              <li class="list__item"><a href="" class="list__link">Как сделать заказ</a></li>
+              <li class="list__item"><a href="" class="list__link">Оплата</a></li>
+              <li class="list__item"><a href="" class="list__link">Доставка</a></li>
+              <li class="list__item"><a href="" class="list__link">Возврат товаров</a></li>
+              <li class="list__item"><a href="" class="list__link">Контакты</a></li>
+              <li class="list__item"><a href="" class="list__link">Безопасность</a></li>
+              <li class="list__item"><a href="" class="list__link">Условия обработки данных</a></li>
+              <li class="list__item"><a href="" class="list__link">Горячая линия комплаенс</a></li>
+
+            </ul>
+          </div>
+
+          <div class="footer-description__down">
+            <div class="description-down__item-icon">
+              <a title="VK" target="_blank" href="https://vk.com/ozon" rel="noopener" class="description-down__icon description-down__icon_odn" ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d8q"><path fill="currentColor" d="M12.982 19C5.466 19 1.18 13.745 1 5h3.765c.124 6.418 2.9 9.137 5.098 9.698V5h3.546v5.536c2.17-.239 4.452-2.761 5.221-5.536h3.546a10.79 10.79 0 0 1-1.698 4.002 10.558 10.558 0 0 1-3.126 2.977 10.895 10.895 0 0 1 3.563 2.893A11.153 11.153 0 0 1 23 19h-3.903a6.94 6.94 0 0 0-2.104-3.377 6.726 6.726 0 0 0-3.584-1.626V19h-.427Z"></path></svg></a>
+              <a title="Одноклассники" target="_blank" href="https://ok.ru/ozon" rel="noopener" class="description-down__icon description-down__icon_vk"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d8q"><path fill="currentColor" d="M11.945 12.394a6.226 6.226 0 0 1-4.366-1.81 6.164 6.164 0 0 1-1.82-4.344 6.241 6.241 0 0 1 1.812-4.378A6.303 6.303 0 0 1 11.945 0a6.203 6.203 0 0 1 4.406 1.83 6.143 6.143 0 0 1 1.779 4.41 6.051 6.051 0 0 1-1.789 4.375 6.109 6.109 0 0 1-4.396 1.78Zm0-8.718a2.588 2.588 0 0 0-1.854.78 2.563 2.563 0 0 0-.723 1.87 2.434 2.434 0 0 0 .749 1.794 2.459 2.459 0 0 0 1.828.684 2.528 2.528 0 0 0 1.81-.703 2.505 2.505 0 0 0 .767-1.776 2.552 2.552 0 0 0-.724-1.868 2.578 2.578 0 0 0-1.853-.781Zm2.49 13.847 3.523 3.419a1.749 1.749 0 0 1 0 2.479 1.621 1.621 0 0 1-1.246.579 1.63 1.63 0 0 1-1.245-.58l-3.522-3.418-3.436 3.419a1.72 1.72 0 0 1-1.289.512 2.067 2.067 0 0 1-1.288-.512 1.751 1.751 0 0 1-.382-1.91c.088-.213.218-.406.382-.57l3.608-3.418a17.912 17.912 0 0 1-3.694-1.624 1.855 1.855 0 0 1-.601-2.479 1.808 1.808 0 0 1 1.177-.807 1.822 1.822 0 0 1 1.4.294 8.096 8.096 0 0 0 8.332 0 1.82 1.82 0 0 1 2.577.513 1.855 1.855 0 0 1-.516 2.479 18.645 18.645 0 0 1-3.78 1.624Z"></path></svg></a>
+              <a title="Telegram" target="_blank" href="https://t.me/ozonru" rel="noopener" class="description-down__icon description-down__icon_tg"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="d8q"><path fill="currentColor" d="M2.512 10.749c5.906-2.54 9.844-4.215 11.814-5.024 5.626-2.31 6.795-2.711 7.557-2.725.168-.003.542.038.785.233.205.164.261.386.288.541.027.156.06.51.034.788-.305 3.162-1.624 10.837-2.295 14.379-.284 1.498-.843 2-1.384 2.05-1.177.107-2.07-.767-3.21-1.505-1.782-1.154-2.79-1.872-4.52-2.998-2-1.301-.704-2.016.436-3.185.298-.306 5.482-4.96 5.582-5.383.012-.053.024-.25-.094-.353-.119-.104-.294-.069-.42-.04-.179.04-3.027 1.898-8.545 5.575-.808.548-1.54.815-2.197.801-.723-.015-2.114-.403-3.149-.735-1.268-.407-2.276-.623-2.189-1.314.046-.36.548-.728 1.507-1.105Z"></path></svg></a>
+            </div>
+            <div class="description-down__item">
+              <a target="_self" href="//docs.ozon.ru/common/pravila-prodayoi-i-rekvizity/soobshchenie-ob-avtorskih-pravah" class="description-down__text">
+                © 1998 – 2023 ООО «Интернет Решения». Все права защищены.
+              </a>
+              <button class="btn btn-primary description-down__btn">
+                <span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="x5-d9"><path fill="currentColor" d="M8 5a2.947 2.947 0 0 0-2.84 2.158l-.002.01-.908 3.147A4.989 4.989 0 0 1 6 10c1.494 0 2.834.655 3.75 1.693A3.983 3.983 0 0 1 12 11c.835 0 1.61.256 2.25.693A4.988 4.988 0 0 1 18 10c.463 0 .912.063 1.338.181L18.06 6.914v-.001A3 3 0 0 0 15.264 5H15a1 1 0 1 1 0-2h.264a5 5 0 0 1 4.66 3.187l2.707 6.924a5 5 0 1 1-9.382.326A1.99 1.99 0 0 0 12 13a1.99 1.99 0 0 0-1.25.438 5 5 0 1 1-9.406-.265l1.89-6.555A4.947 4.947 0 0 1 8 3a1 1 0 0 1 0 2Zm-2 7a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm12 0a3 3 0 1 0-.002 6A3 3 0 0 0 18 12Z"></path></svg>
+                </span>
+                <span>Для слабовидящих</span>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        
+          
+        </div>
+      </div>
+    </div>
   </footer>
 
 
